# FilMoreBlanks

./: .gitignore  README.MD  README.md  basic_access.py  blanket_fill.py  cli_access.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utilites.py
.github/workflows/: codeql-analysis.yml  dependabot.yml  python-publish.yml
FilMoreBlanks/: blanket_fill.py  utilites.py
examples/: config_templete.yaml
